[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/GameManager.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Exo_2/Exo2-VariableFont_wght.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 56
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 1
font_data = ExtResource( 3 )

[node name="GameManager" type="Spatial"]
script = ExtResource( 2 )

[node name="Viewport" type="ViewportContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="Viewport"]
visible = false
anchor_left = 0.831
anchor_top = 0.039
anchor_right = 0.924
anchor_bottom = 0.056
margin_left = -1063.68
margin_top = -28.08
margin_right = 97.28
margin_bottom = 679.68

[node name="moves" type="Control" parent="Viewport/HUD"]
margin_left = 581.132
margin_top = 586.625
margin_right = 621.132
margin_bottom = 626.625
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="Viewport/HUD/moves"]
margin_right = 293.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
text = "moves: 27"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Control" parent="Viewport/HUD"]
margin_left = 1084.16
margin_top = 37.7976
margin_right = 1124.16
margin_bottom = 77.7976
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="pause" type="Button" parent="Viewport/HUD/pause"]
margin_right = 161.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="revert" type="Control" parent="Viewport/HUD"]
margin_left = 782.178
margin_top = 46.0268
margin_right = 862.178
margin_bottom = 106.027
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="revert" type="Button" parent="Viewport/HUD/revert"]
margin_left = -11.0
margin_top = -4.0
margin_right = 151.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="Control" parent="Viewport"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.831
anchor_top = 0.039
anchor_right = 0.924
anchor_bottom = 0.056
margin_left = -1063.68
margin_top = -1235.1
margin_right = 97.28
margin_bottom = -527.34
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Viewport/Win"]
position = Vector2( 668.263, -98.1629 )
scale = Vector2( 10, 10 )
color = Color( 0.00784314, 0.00784314, 0.00784314, 0.203922 )
polygon = PoolVector2Array( -1603.5, -1082.35, -1495.71, 1404.72, 1675.87, 1378.02, 1569.08, -498.763 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Viewport/Win"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -418.5
margin_right = 418.5
margin_bottom = 121.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "You Won!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stars" type="Label" parent="Viewport/Win"]
margin_left = 541.666
margin_top = 137.198
margin_right = 731.666
margin_bottom = 205.198
custom_fonts/font = SubResource( 3 )
text = "STARS: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moves" type="Label" parent="Viewport/Win"]
margin_left = 546.121
margin_top = 424.068
margin_right = 741.121
margin_bottom = 492.068
custom_fonts/font = SubResource( 3 )
text = "MOVES:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry" type="TextureButton" parent="Viewport/Win"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -238.0
margin_right = 252.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/Win/retry"]
margin_left = 79.3673
margin_top = 19.5101
margin_right = 177.367
margin_bottom = 120.51
custom_fonts/font = SubResource( 4 )
text = "Retry
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="home" type="TextureButton" parent="Viewport/Win"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -126.0
margin_top = -181.0
margin_right = 126.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/Win/home"]
margin_left = 79.3673
margin_top = 19.5101
margin_right = 177.367
margin_bottom = 120.51
custom_fonts/font = SubResource( 4 )
text = "Home"

[node name="next" type="TextureButton" parent="Viewport/Win"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -329.0
margin_top = -246.0
margin_right = -77.0001
margin_bottom = -80.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/Win/next"]
margin_left = 79.3673
margin_top = 19.5101
margin_right = 177.367
margin_bottom = 120.51
custom_fonts/font = SubResource( 4 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lose" type="Control" parent="Viewport"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.831
anchor_top = 0.039
anchor_right = 0.924
anchor_bottom = 0.056
margin_left = -1063.68
margin_top = -1235.1
margin_right = 97.28
margin_bottom = -527.34
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Viewport/Lose"]
position = Vector2( 668.263, -98.1629 )
scale = Vector2( 10, 10 )
color = Color( 0.00784314, 0.00784314, 0.00784314, 0.454902 )
polygon = PoolVector2Array( -1597.38, -1034.75, -1495.71, 1404.72, 1675.87, 1378.02, 1569.08, -498.763 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Viewport/Lose"]
margin_left = 593.97
margin_top = 248.902
margin_right = 1102.97
margin_bottom = 524.902
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "You Lost!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry" type="Button" parent="Viewport/Lose"]
anchor_left = 0.520952
anchor_top = 0.603157
anchor_right = 0.717826
anchor_bottom = 0.735101
margin_top = -3.05176e-05
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Viewport/Lose/retry"]
margin_left = 79.3673
margin_top = 19.5101
margin_right = 177.367
margin_bottom = 120.51
custom_fonts/font = SubResource( 4 )
text = "Retry
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="home" type="Button" parent="Viewport/Lose"]
margin_left = 672.635
margin_top = 606.508
margin_right = 924.635
margin_bottom = 701.508
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/Lose/home"]
margin_left = 79.3673
margin_top = 19.5101
margin_right = 177.367
margin_bottom = 120.51
custom_fonts/font = SubResource( 4 )
text = "Home"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActivateWM" type="Control" parent="Viewport"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.831
anchor_top = 0.039
anchor_right = 0.924
anchor_bottom = 0.056
margin_left = -1063.68
margin_top = -1235.1
margin_right = 97.28
margin_bottom = -527.34
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Viewport/ActivateWM"]
position = Vector2( 668.263, -98.1629 )
scale = Vector2( 10, 10 )
color = Color( 0.00784314, 0.00784314, 0.00784314, 0.454902 )
polygon = PoolVector2Array( -1521.27, -1044.27, -1495.71, 1404.72, 1675.87, 1378.02, 1569.08, -498.763 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Viewport/ActivateWM"]
margin_left = 488.518
margin_top = 132.771
margin_right = 1143.52
margin_bottom = 408.771
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Activate 
superpowers?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes" type="Button" parent="Viewport/ActivateWM"]
margin_left = 887.067
margin_top = 451.626
margin_right = 1139.07
margin_bottom = 546.626
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/ActivateWM/yes"]
margin_left = 79.3673
margin_top = 19.5101
margin_right = 177.367
margin_bottom = 120.51
custom_fonts/font = SubResource( 4 )
text = "YES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no" type="Button" parent="Viewport/ActivateWM"]
margin_left = 512.454
margin_top = 450.332
margin_right = 764.454
margin_bottom = 545.332
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/ActivateWM/no"]
margin_left = 79.3673
margin_top = 19.5101
margin_right = 177.367
margin_bottom = 120.51
custom_fonts/font = SubResource( 4 )
text = "NO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wm-reminder" type="Control" parent="Viewport"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.831
anchor_top = 0.039
anchor_right = 0.924
anchor_bottom = 0.056
margin_left = -1063.68
margin_top = -1235.1
margin_right = 97.28
margin_bottom = -527.34
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Viewport/wm-reminder"]
position = Vector2( 668.263, -98.1629 )
scale = Vector2( 10, 10 )
color = Color( 0.00784314, 0.00784314, 0.00784314, 0.454902 )
polygon = PoolVector2Array( -1521.27, -1044.27, -1495.71, 1404.72, 1675.87, 1378.02, 1569.08, -498.763 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="Viewport/wm-reminder"]
margin_left = 524.719
margin_top = 277.496
margin_right = 1231.72
margin_bottom = 378.496
custom_fonts/font = SubResource( 4 )
text = "(CLICK time button or press backspace)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/wm-reminder"]
margin_left = 488.518
margin_top = 132.771
margin_right = 1143.52
margin_bottom = 408.771
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "You have powers"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="Viewport"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.831
anchor_top = 0.039
anchor_right = 0.924
anchor_bottom = 0.056
margin_left = -1063.68
margin_top = -1235.1
margin_right = 97.28
margin_bottom = -527.34
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Viewport/Pause"]
position = Vector2( 668.263, -98.1629 )
scale = Vector2( 10, 10 )
color = Color( 0.00784314, 0.00784314, 0.00784314, 0.454902 )
polygon = PoolVector2Array( -1521.27, -1044.27, -1495.71, 1404.72, 1675.87, 1378.02, 1569.08, -498.763 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Control" parent="Viewport/Pause"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -226.5
margin_right = 226.5
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/Pause/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -166.5
margin_top = -121.0
margin_right = 166.5
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Control" parent="Viewport/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -48.0
margin_right = 125.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="TextureButton" parent="Viewport/Pause/resume"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -126.0
margin_top = -132.0
margin_right = 126.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/Pause/resume/resume"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -67.0
margin_right = 76.5
margin_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "RESUME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Control" parent="Viewport/Pause"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -77.5
margin_right = 368.0
margin_bottom = 77.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="TextureButton" parent="Viewport/Pause/restart"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -252.003
margin_top = -95.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/Pause/restart/restart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -24.5
margin_right = 82.5
margin_bottom = 24.5
custom_fonts/font = SubResource( 4 )
text = "RESTART"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="home" type="Control" parent="Viewport/Pause"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -402.0
margin_top = -76.5
margin_bottom = 76.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="home" type="TextureButton" parent="Viewport/Pause/home"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -95.0
margin_right = 252.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/Pause/home/home"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5
margin_top = -50.5
margin_right = 55.5
margin_bottom = -1.49995
custom_fonts/font = SubResource( 4 )
text = "HOME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fly" type="Tween" parent="Viewport"]

[node name="fade" type="Tween" parent="Viewport"]
[connection signal="pressed" from="Viewport/HUD/pause/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Viewport/HUD/revert/revert" to="." method="_on_revert_pressed"]
[connection signal="pressed" from="Viewport/Win/retry" to="." method="_won_on_retry_pressed"]
[connection signal="pressed" from="Viewport/Win/home" to="." method="_won_on_home_pressed"]
[connection signal="pressed" from="Viewport/Win/next" to="." method="_won_on_next_pressed"]
[connection signal="pressed" from="Viewport/Lose/retry" to="." method="_lose_on_retry_pressed"]
[connection signal="pressed" from="Viewport/Lose/home" to="." method="_lose_on_home_pressed"]
[connection signal="pressed" from="Viewport/ActivateWM/yes" to="." method="_monetization_on_yes_pressed"]
[connection signal="pressed" from="Viewport/ActivateWM/no" to="." method="_monetization_on_no_pressed"]
[connection signal="pressed" from="Viewport/Pause/resume/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Viewport/Pause/restart/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Viewport/Pause/home/home" to="." method="_on_home_pressed"]
